# sw-deps-monitor

./: .env.example  .gitignore  LICENSE  README.md  THIRD_PARTY_LICENSES.md
.github/workflows/: CIChecks.yml  DependenciesCheckAllLibraries.yml  DependenciesCheckModifiedLibraries.yml  IsLinkedToLibraryCheckAllFiles.yml  IsLinkedToLibraryCheckModifiedFiles.yml  PRBaseBranchSyncCheck.yml
CICD/: CICD.lvlib  CICD.lvproj
CICD/AutomatedChecks/: IsLinkedToLibrary.vi  UnexpectedDepsCheck.vi  UnexpectedDepsCheck1.vi  UpdateActualDepsList.vi
CICD/CheckModifiedVIs/: CheckModifiedVIs.lvlib  CheckModifiedVIs.lvproj  GenerateChangedFilesList.vi  GenerateChangedLibrariesList.vi
CICD/Configs/: PathConfigs.ini  ReadCICDPathConfig.vi
CICD/DevTools/: CreateProjectsForEachLibrary.vi  InitializeExpDepsFilesWithActualDeps.vi
CICD/GCLIWrappers/: GCliExit.vi  GCliTemplate.vi  GCliWrite.vi
CICD/SubVIs/: IsUserLibVI.vi  (+19 more)
Docs/: Automated Dependency Monitoring in CI Pipeline.pptx  ExampleAppArchitecture.md
Sandbox/: CIChecks.yml  README.md
Source/: ExampleApp.lvproj  ReadMe.md
Tests/: ReadMe.md
scripts/: pyproject.toml  validate-paths.ps1
scripts/sample_dependency_graphs/: coupling_metrics.md
scripts/src/scripts/: __init__.py  analyze_dependencies.py  calculate_coupling_metrics.py  commit_adeps_changes.py  create_pr_for_deps.py  find_circular_paths.py  find_root_nodes.py  generate_changed_files_list.py  generate_dependency_graph_for_selected_nodes.py  generate_full_dependency_graph.py  sort_actual_deps_list.py  utils.py  validate_paths.py
scripts/tests/: main.py  test1.py
(+100 files in other folders)
