[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Karthick Shanmuga Rao", email = "karthikssfeb@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pytest>=9.0.2",
]

[project.scripts]
scripts = "scripts:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
