[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Karthick Shanmuga Rao", email = "karthikssfeb@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "kaleido>=1.2.0",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "plotly>=6.5.2",
    "pytest>=9.0.2",
]

[project.scripts]
scripts = "scripts:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
